--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>vue2-mapboxgl-component</title>
+
+    <link href="https://api.mapbox.com/mapbox-gl-js/v0.34.0/mapbox-gl.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
