--- a/index.html
+++ b/index.html
@@ -27,63 +27,63 @@
         :gl-pitch="mapPitch"
         :gl-popups="mapPopups">
       </v-mapboxgl>
+
+      <script src="https://unpkg.com/vue"></script>
+      <script src="dist/vue2-mapboxgl-component.min.js"></script>
+
+      <script>
+        Vue.config.debug = true
+
+        new Vue({
+          el: '#app',
+          components: {
+            vMapboxgl: vMapboxgl
+          },
+          data () {
+            return {
+              mapId: 'map',
+              mapAccessToken: 'pk.eyJ1IjoibmFpbWlrYW4iLCJhIjoiY2lraXJkOXFjMDA0OXdhbTYzNTE0b2NtbiJ9.O64XgZQHNHcV2gwNLN2a0Q',
+              mapHeight: window.innerHeight,
+              mapWidth: window.innerWidth,
+              mapCenter: {
+                autodiscover: true
+              },
+              mapControls: {
+                navigation: {
+                  enabled: true,
+                  options: {}
+                }
+              },
+              mapZoom: {
+                value: 8
+              },
+              mapStyle: 'mapbox://styles/mapbox/streets-v9',
+              mapBearing: {
+                value: 40
+              },
+              mapPitch: {
+                value: 60
+              },
+              mapPopups: [
+                {
+                  coordinates: [-2, 41],
+                  message: 'Hi popup!'
+                  // message: '<h3>Title</h3><v-mapboxgl :access-token="\'pk.eyJ1IjoibmFpbWlrYW4iLCJhIjoiY2lraXJkOXFjMDA0OXdhbTYzNTE0b2NtbiJ9.O64XgZQHNHcV2gwNLN2a0Q\'" :width="150" :height="150"></v-mapboxgl>'
+                }
+              ]
+            }
+          },
+          methods: {
+            handleResize (event) {
+              this.mapHeight = event.currentTarget.innerHeight
+              this.mapWidth = event.currentTarget.innerWidth
+            }
+          },
+          mounted () {
+            window.addEventListener('resize', this.handleResize)
+          }
+        })
+      </script>
     </div>
-
-    <script src="https://unpkg.com/vue"></script>
-    <script src="./dist/vue2-mapboxgl-component.min.js"></script>
-
-    <script>
-      Vue.config.debug = true
-
-      new Vue({
-        el: '#app',
-        components: {
-          vMapboxgl: vMapboxgl
-        },
-        data () {
-          return {
-            mapId: 'map',
-            mapAccessToken: 'pk.eyJ1IjoibmFpbWlrYW4iLCJhIjoiY2lraXJkOXFjMDA0OXdhbTYzNTE0b2NtbiJ9.O64XgZQHNHcV2gwNLN2a0Q',
-            mapHeight: window.innerHeight,
-            mapWidth: window.innerWidth,
-            mapCenter: {
-              autodiscover: true
-            },
-            mapControls: {
-              navigation: {
-                enabled: true,
-                options: {}
-              }
-            },
-            mapZoom: {
-              value: 8
-            },
-            mapStyle: 'mapbox://styles/mapbox/streets-v9',
-            mapBearing: {
-              value: 40
-            },
-            mapPitch: {
-              value: 60
-            },
-            mapPopups: [
-              {
-                coordinates: [-2, 41],
-                message: 'Hi popup!'
-                // message: '<h3>Title</h3><v-mapboxgl :access-token="\'pk.eyJ1IjoibmFpbWlrYW4iLCJhIjoiY2lraXJkOXFjMDA0OXdhbTYzNTE0b2NtbiJ9.O64XgZQHNHcV2gwNLN2a0Q\'" :width="150" :height="150"></v-mapboxgl>'
-              }
-            ]
-          }
-        },
-        methods: {
-          handleResize (event) {
-            this.mapHeight = event.currentTarget.innerHeight
-            this.mapWidth = event.currentTarget.innerWidth
-          }
-        },
-        mounted () {
-          window.addEventListener('resize', this.handleResize)
-        }
-      })
-    </script>
   </body>
 </html>
